--- a/hwDjango/catalog/templates/catalog/contact.html
+++ b/hwDjango/catalog/templates/catalog/contact.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,8 +11,7 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">SmidyStore</h5>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="store">Каталог</a>
-        <a class="p-2 btn btn-outline-primary" href="contact">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:store' %}">Каталог</a>
     </nav>
 </div>
 
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-12 col-md">
                 SmidyStore
-                <small class="d-block mb-3 text-muted">&copy; 2023</small>
+                <small class="d-block mb-3 text-muted">&copy; {% now 'Y' %}</small>
             </div>
             <div class="col-6 col-md">
                 <h5>Категории</h5>
