--- a/hwDjango/catalog/templates/catalog/base.html
+++ b/hwDjango/catalog/templates/catalog/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load to_media %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,8 +9,7 @@
     <meta name="generator" content="Hugo 0.84.0">
     <title>Catalog</title>
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -208,7 +208,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">
+                <a href="{% url 'catalog:store' %}" class="nav-link active" aria-current="page">
                     <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#home"/>
                     </svg>
