--- a/hwDjango/catalog/templates/catalog/product.html
+++ b/hwDjango/catalog/templates/catalog/product.html
@@ -4,60 +4,23 @@
 <header>
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
         <h1 class="display-4 fw-normal text-body-emphasis">Выбранный товар</h1>
-        <p class="fs-5 text-body-secondary">Вы находитесь на сайте, предназначенном для продажи товаров</p>
     </div>
 </header>
 
 <main class="row">
     <div class="row text-center">
-        <div class="col-4">
+        <div>
             <div class="card mb-4 rounded-3 shadow-sm">
                 <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Алигатор</h4>
+                    <h3 class="my-0 fw-normal"><b>{{ object.name }}</b></h3>
                 </div>
                 <div class="card-body">
-                    <h2 class="card-title pricing-card-title">$100500</h2>
+                    <h2 class="card-title pricing-card-title">{{ object.cost }} руб.</h2>
                     <p>
-                        10 users included,
-                        2 GB of storage,
-                        Email support,
-                        Help center access
+                        {{ object }}
                     </p>
-                    <button type="button" class="btn btn-success">Купить</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card mb-4 rounded-3 shadow-sm">
-                <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Самовар</h4>
-                </div>
-                <div class="card-body">
-                    <h2 class="card-title pricing-card-title">$250</h2>
-                    <p>
-                        10 users included,
-                        2 GB of storage,
-                        Email support,
-                        Help center access
-                    </p>
-                    <button type="button" class="btn btn-success">Купить</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card mb-4 rounded-3 shadow-sm">
-                <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Жвачка по рублю</h4>
-                </div>
-                <div class="card-body">
-                    <h2 class="card-title pricing-card-title">$1</h2>
-                    <p>
-                        10 users included,
-                        2 GB of storage,
-                        Email support,
-                        Help center access
-                    </p>
-                    <button type="button" class="btn btn-success">Купить</button>
+                    <img class="card-img-top" src="{{ my_media object.preview }}">
+                    <a class="btn btn-primary btn-success">Купить</a>
                 </div>
             </div>
         </div>
