add new features

--- a/hwDjango/catalog/templates/catalog/index.html
+++ b/hwDjango/catalog/templates/catalog/index.html
@@ -22,7 +22,7 @@
                             {{ product }}
                         </p>
 
-                        <a class="btn btn-primary btn-success" href={% url 'catalog:product' product.pk %}>Купить</a>
+                        <a class="btn btn-primary btn-success" href="{% url 'catalog:product' product.pk %}">Купить</a>
                     </div>
                 </div>
             </div>
