--- a/hwDjango/catalog/templates/catalog/register.html
+++ b/hwDjango/catalog/templates/catalog/register.html
@@ -30,7 +30,7 @@
         <label for="password" class="form-label">Password</label>
         <input name="password" type="password" class="form-control" id="password">
     </div>
-    <button type="submit" class="btn btn-primary">Отправить</button>
+    <a class="btn btn-primary" href="{% url 'catalog:store' %}">Отправить</a>
 </form>
 
 </body>
