--- a/hwDjango/catalog/templates/catalog/base.html
+++ b/hwDjango/catalog/templates/catalog/base.html
@@ -216,11 +216,11 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-link text-white">
+                <a href="{% url 'blog:list' %}" class="nav-link text-white">
                     <svg class="bi me-2" width="16" height="16">
                         <use xlink:href="#speedometer2"/>
                     </svg>
-                    Категории
+                    Блог
                 </a>
             </li>
             <li>
