--- a/hwDjango/blog/templates/blog/blog_confirm_delete.html
+++ b/hwDjango/blog/templates/blog/blog_confirm_delete.html
@@ -15,15 +15,18 @@
                     <h2 class="my-0 fw-normal"><b>{{ object.title }}</b></h2>
                 </div>
                 <div class="card-body">
-                    <p>
-                        {{ object.description }}
-                    </p>
-                    {% if object.preview %}
+                    <form method="post">
+                        {% csrf_token %}
+                        <p>
+                            {{ object.description }}
+                        </p>
+                        {% if object.preview %}
                         <img class="img-top" width="300" height="300" src="{{ object.preview| my_media }}">
-                    {% endif %}
-                    <br>
-                    <button type="submit" class="btn mt-2 btn-danger">Удалить</button>
-                    <a class="btn btn-primary mt-2 btn-success" href="{% url 'blog:list' %}">Вернуться к блогам</a>
+                        {% endif %}
+                        <br>
+                        <button type="submit" class="btn mt-2 btn-danger">Удалить</button>
+                        <a class="btn btn-primary mt-2 btn-success" href="{% url 'blog:list' %}">Вернуться к блогам</a>
+                    </form>
                 </div>
             </div>
         </div>
