--- a/hwDjango/catalog/templates/catalog/base.html
+++ b/hwDjango/catalog/templates/catalog/base.html
@@ -248,7 +248,7 @@
                 <strong>Пользователь</strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="#">Профиль</a></li>
+                <li><a class="dropdown-item">Профиль</a></li> <!--href="% url 'catalog:profile' user.pk %"-->
 <!--name: admin1; pass: smidy-->
                 <li>
                     <hr class="dropdown-divider">
