--- a/hwDjango/catalog/templates/catalog/product_list.html
+++ b/hwDjango/catalog/templates/catalog/product_list.html
@@ -5,6 +5,7 @@
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
         <h1 class="display-4 fw-normal text-body-emphasis">Главная</h1>
         <p class="fs-5 text-body-secondary">Вы находитесь на сайте, предназначенном для продажи товаров</p>
+        <a type="button" class="btn btn-outline-primary" href='{% url "catalog:create_product" %}'>Добавить новый продукт</a>
     </div>
 </header>
 
@@ -19,10 +20,13 @@
                     <div class="card-body">
                         <h2 class="card-title pricing-card-title">{{ product.cost }} руб.</h2>
                         <p>
-                            {{ product }}
+                            {{ product.description }}
                         </p>
 
-                        <a class="btn btn-primary btn-success" href="{% url 'catalog:product' product.pk %}">Купить</a>
+                        <div class="btn-group col-8">
+                            <a class="btn btn-primary btn-success" href="{% url 'catalog:product' product.pk %}">Купить</a>
+                            <a class="btn btn-primary btn-warning" href="{% url 'catalog:update_product' product.pk %}">Изменить</a>
+                        </div>
                     </div>
                 </div>
             </div>
