added new models (version, users) new CRUD features

--- a/hwDjango/catalog/templates/catalog/base.html
+++ b/hwDjango/catalog/templates/catalog/base.html
@@ -253,7 +253,7 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="{% url 'catalog:register' %}">Выход</a></li>
+                <li><a class="dropdown-item">Выход</a></li>
             </ul>
         </div>
     </div>
