added new authentication app Users new features - login, logout, registration, view/edit profile anonym users currently can't create/update products

--- a/hwDjango/catalog/templates/catalog/base.html
+++ b/hwDjango/catalog/templates/catalog/base.html
@@ -244,16 +244,35 @@
         <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                <img
+                        {% if users.avatar %}
+                        src="{{ users.avatar }}"
+                        {% else %}
+                        src="https://avatars.mds.yandex.net/i?id=b0d935f6f54ceb7b0867ca59f30fea3834521643-12472657-images-thumbs&n=13"
+                        {% endif %}
+                        alt="" width="32" height="32" class="rounded-circle me-2">
                 <strong>Пользователь</strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item">Профиль</a></li> <!--href="% url 'catalog:profile' user.pk %"-->
-<!--name: admin1; pass: smidy-->
+                {% if user.is_authenticated %}
+                <li><a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a></li>
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item">Выход</a></li>
+                <li>
+                    <form method="post" action="{% url 'users:logout' %}">
+                        {% csrf_token %}
+                        <button class="dropdown-item" type="submit">Выйти</button>
+                    </form>
+                </li>
+                {% else %}
+                <li><a class="dropdown-item" href="{% url 'users:login' %}">Войти</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="{% url 'users:register' %}">Регистрация</a></li>
+                {% endif %}
+<!--name: admin1; pass: smidy-->
             </ul>
         </div>
     </div>
