--- a/hwDjango/users/templates/users/login.html
+++ b/hwDjango/users/templates/users/login.html
@@ -28,6 +28,7 @@
 
         {% endif %}-->
     </button>
+    <a type="button" class="btn btn-warning" href="{% url 'users:login' %}">Восстановить пароль</a>
     <a type="button" class="btn btn-danger" href="{% url 'catalog:store' %}">Вернуться к товарам</a>
 </form>
 
