--- a/hwDjango/catalog/templates/catalog/version_detail.html
+++ b/hwDjango/catalog/templates/catalog/version_detail.html
@@ -26,6 +26,7 @@
                     <br>
                     <a class="btn btn-primary mt-2 btn-danger" href="{% url 'catalog:store' %}">Вернуться к товарам</a>
                     <a class="btn btn-primary mt-2 btn-waring" href="{% url 'catalog:version_update' version.pk %}">Изменить версию</a>
+                    <a class="btn btn-primary mt-2 btn-waring" href="{% url 'catalog:version_delete' version.pk %}">Удалить</a>
                 </div>
             </div>
         </div>
