--- a/hwDjango/catalog/templates/catalog/product_list.html
+++ b/hwDjango/catalog/templates/catalog/product_list.html
@@ -5,97 +5,112 @@
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
         <h1 class="display-4 fw-normal text-body-emphasis">Главная</h1>
         <p class="fs-5 text-body-secondary">Вы находитесь на сайте, предназначенном для продажи товаров</p>
-        <a type="button" class="btn btn-outline-primary" href='{% url "catalog:create_product" %}'>Добавить новый продукт</a>
+        <a type="button" class="btn btn-outline-primary" href='{% url "catalog:create_product" %}'>Добавить новый
+            продукт</a>
     </div>
 </header>
 
 <main class="row">
-    <div class="row text-center">
-        {% for product in object_list%}
-            <div class="col-4">
-                <div class="card mb-4 rounded-3 shadow-sm">
-                    <div class="card-header py-3">
-                        <h4 class="my-0 fw-normal"><b>{{ product.name }}</b></h4>
-                    </div>
-                    <div class="card-body">
-                        <h2 class="card-title pricing-card-title">{{ product.cost }} руб.</h2>
-                        <p>
-                            {{ product.description }}
-                        </p>
+    {% for product in object_list%}
+    <div class="col-4">
+        <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3 text-center">
+                <h4 class="my-0 fw-normal"><b>{{ product.name }}</b></h4>
+            </div>
+            <div class="card-body">
+                <h2 class="card-title pricing-card-title text-center">{{ product.cost }} руб.</h2>
+                <p>
+                    {{ product.description }}
+                </p>
 
-                        <div class="btn-group col-8">
-                            <a class="btn btn-primary btn-success" href="{% url 'catalog:product' product.pk %}">Купить</a>
-                            <a class="btn btn-primary btn-warning" href="{% url 'catalog:update_product' product.pk %}">Изменить</a>
-                        </div>
+                <div class="btn-group col-8 text-center">
+                    <a class="btn btn-primary btn-success" href="{% url 'catalog:product' product.pk %}">Купить</a>
+                    <a class="btn btn-primary btn-warning"
+                       href="{% url 'catalog:update_product' product.pk %}">Изменить</a>
+                </div>
+                <br>
+                <p class="card-text">
+                    {% if product.author %}
+                    Создал: {{ product.author }}
+                    {% endif %}
+                </p>
+                <p class="card-text">
+                    {% for version in active_versions %}
+                    {% if version.product.id == product.id %}
+                    Текущая версия: {{ version.version_name }}
+                    (версия {{ version.version_num }})
+                    {% endif %}
+                    {% endfor %}
+                </p>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+    <div>
+        <p class="d-inline-flex gap-1">
+            <a class="btn btn-info" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button"
+               aria-expanded="false" aria-controls="multiCollapseExample1">Как купить?</a>
+            <button class="btn btn-info" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#multiCollapseExample2" aria-expanded="false"
+                    aria-controls="multiCollapseExample2">Как доставить?
+            </button>
+            <button class="btn btn-info" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#multiCollapseExample3" aria-expanded="false"
+                    aria-controls="multiCollapseExample3">Какая гарантия?
+            </button>
+        </p>
+        <div class="row">
+            <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample1">
+                    <div class="card card-body">
+                        Нажми на кнопку купить
                     </div>
                 </div>
             </div>
-        {% endfor %}
-
-        <div>
-            <p class="d-inline-flex gap-1">
-                <a class="btn btn-info" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button"
-                   aria-expanded="false" aria-controls="multiCollapseExample1">Как купить?</a>
-                <button class="btn btn-info" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#multiCollapseExample2" aria-expanded="false"
-                        aria-controls="multiCollapseExample2">Как доставить?
-                </button>
-                <button class="btn btn-info" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#multiCollapseExample3" aria-expanded="false"
-                        aria-controls="multiCollapseExample3">Какая гарантия?
-                </button>
-            </p>
-            <div class="row">
-                <div class="col">
-                    <div class="collapse multi-collapse" id="multiCollapseExample1">
-                        <div class="card card-body">
-                            Нажми на кнопку купить
-                        </div>
+            <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample2">
+                    <div class="card card-body">
+                        Зря ты туда полез
                     </div>
                 </div>
-                <div class="col">
-                    <div class="collapse multi-collapse" id="multiCollapseExample2">
-                        <div class="card card-body">
-                            Зря ты туда полез
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="collapse multi-collapse" id="multiCollapseExample3">
-                        <div class="card card-body">
-                            Честное слово все работает
-                        </div>
+            </div>
+            <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample3">
+                    <div class="card card-body">
+                        Честное слово все работает
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">№</th>
-                    <th scope="col">Товар</th>
-                    <th scope="col">Цена ($/шт)</th>
-                    <th scope="col">Количество</th>
-                    <th scope="col">Итого</th>
-                    <th scope="col">Статус заказа</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for product in object_list %}
-                    <tr>
-                        <th scope="row">{{ product.pk }}</th>
-                        <td>{{ product.name }}</td>
-                        <td>{{ product.cost }}</td>
-                        <td>1</td>
-                        <td>{{ product.cost }}</td>
-                        <td class="table-primary">Новый</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+    <div>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">№</th>
+                <th scope="col">Товар</th>
+                <th scope="col">Цена ($/шт)</th>
+                <th scope="col">Количество</th>
+                <th scope="col">Итого</th>
+                <th scope="col">Статус заказа</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for product in object_list %}
+            <tr>
+                <th scope="row">{{ product.pk }}</th>
+                <td>{{ product.name }}</td>
+                <td>{{ product.cost }}</td>
+                <td>1</td>
+                <td>{{ product.cost }}</td>
+                <td class="table-primary">Новый</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
     </div>
 </main>
 {% endblock %}
