--- a/hwDjango/catalog/templates/catalog/product_list.html
+++ b/hwDjango/catalog/templates/catalog/product_list.html
@@ -23,11 +23,14 @@
                     {{ product.description }}
                 </p>
 
-                <div class="btn-group col-8 text-center">
-                    <a class="btn btn-primary btn-success" href="{% url 'catalog:product' product.pk %}">Купить</a>
-                    <a class="btn btn-primary btn-warning"
-                       href="{% url 'catalog:update_product' product.pk %}">Изменить</a>
-                </div>
+
+                <a class="btn btn-primary btn-success" href="{% url 'catalog:product' product.pk %}">Купить</a>
+                {% if perms.catalog.change_product %}
+                    <a class="btn btn-primary btn-warning" href="{% url 'catalog:update_product' product.pk %}">Изменить</a>
+                {% endif %}
+                {% if perms.catalog.delete_product %}
+                    <a class="btn btn-primary btn-danger" href="{% url 'catalog:delete_product' product.pk %}">Удалить</a>
+                {% endif %}
                 <br>
                 <p class="card-text">
                     {% if product.author %}
