--- a/hwDjango/users/templates/users/register.html
+++ b/hwDjango/users/templates/users/register.html
@@ -22,6 +22,8 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">Отправить</button>
+    <a type="button" class="btn btn-primary" href="{% url 'users:login' %}">У меня есть аккаунт</a>
+
 </form>
 
 </body>
